面板不再被 null 打斷，拼法對不上也查得到
認不出來的行會在清單裡放 null，而 List.copyOf 不收 null：每一幀丟一次
NullPointerException，整個 setCurrent 被打斷，面板不更新。一次遊戲紀錄
三千九百多筆。

語料是維基抓的美式拼法（honors），遊戲顯示英式（honours），差一個字母
整句查不到，涉及八百多條。查不到時換拼法再查一次。

任務開始那則訊息是「一句話＋任務名＋進度」拼出來的，語料裡三樣都有、
就是沒有黏在一起的那一條。改成拆成幾截各自查表，湊得滿才換。

玩家 ID 前面常是頓號，整行沒有空白可退，Green_teaTW 被切成兩半。
改成退到這個字自己的開頭。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>